--- a/train_ob_detec/ssd_mobilenet_v2.config
+++ b/train_ob_detec/ssd_mobilenet_v2.config
@@ -1,8 +1,39 @@
 model {
   ssd {
-    inplace_batchnorm_update: true
-    freeze_batchnorm: false
-    num_classes: 2							##-- Edit this
+    num_classes: 2
+    image_resizer {
+      fixed_shape_resizer {
+        height: 300
+        width: 300
+      }
+    }
+    feature_extractor {
+      type: "ssd_mobilenet_v2"
+      depth_multiplier: 1.0
+      min_depth: 16
+      conv_hyperparams {
+        regularizer {
+          l2_regularizer {
+            weight: 3.99999989895e-05
+          }
+        }
+        initializer {
+          truncated_normal_initializer {
+            mean: 0.0
+            stddev: 0.0299999993294
+          }
+        }
+        activation: RELU_6
+        batch_norm {
+          decay: 0.999700009823
+          center: true
+          scale: true
+          epsilon: 0.0010000000475
+          train: true
+        }
+      }
+      use_depthwise: true
+    }
     box_coder {
       faster_rcnn_box_coder {
         y_scale: 10.0
@@ -18,131 +49,91 @@ model {
         ignore_thresholds: false
         negatives_lower_than_unmatched: true
         force_match_for_each_row: true
-        use_matmul_gather: true
       }
     }
     similarity_calculator {
       iou_similarity {
       }
     }
-    encode_background_as_zeros: true
-    anchor_generator {
-      ssd_anchor_generator {
-        num_layers: 6
-        min_scale: 0.2
-        max_scale: 0.95
-        aspect_ratios: 1.0
-        aspect_ratios: 2.0
-        aspect_ratios: 0.5
-        aspect_ratios: 3.0
-        aspect_ratios: 0.3333
-      }
-    }
-    image_resizer {
-      fixed_shape_resizer {
-        height: 300
-        width: 300
-      }
-    }
     box_predictor {
       convolutional_box_predictor {
+        conv_hyperparams {
+          regularizer {
+            l2_regularizer {
+              weight: 3.99999989895e-05
+            }
+          }
+          initializer {
+            truncated_normal_initializer {
+              mean: 0.0
+              stddev: 0.0299999993294
+            }
+          }
+          activation: RELU_6
+          batch_norm {
+            decay: 0.999700009823
+            center: true
+            scale: true
+            epsilon: 0.0010000000475
+            train: true
+          }
+        }
         min_depth: 0
         max_depth: 0
         num_layers_before_predictor: 0
         use_dropout: false
-        dropout_keep_probability: 0.8
-        kernel_size: 1
+        dropout_keep_probability: 0.800000011921
+        kernel_size: 3
         box_code_size: 4
         apply_sigmoid_to_scores: false
-        class_prediction_bias_init: -4.6
-        conv_hyperparams {
-          activation: RELU_6,
-          regularizer {
-            l2_regularizer {
-              weight: 0.00004
-            }
-          }
-          initializer {
-            random_normal_initializer {
-              stddev: 0.01
-              mean: 0.0
-            }
-          }
-          batch_norm {
-            train: true,
-            scale: true,
-            center: true,
-            decay: 0.97,
-            epsilon: 0.001,
-          }
-        }
+        use_depthwise: true
       }
     }
-    feature_extractor {
-      type: 'ssd_mobilenet_v2_keras'
-      min_depth: 16
-      depth_multiplier: 1.0
-      conv_hyperparams {
-        activation: RELU_6,
-        regularizer {
-          l2_regularizer {
-            weight: 0.00004
-          }
-        }
-        initializer {
-          truncated_normal_initializer {
-            stddev: 0.03
-            mean: 0.0
-          }
-        }
-        batch_norm {
-          train: true,
-          scale: true,
-          center: true,
-          decay: 0.97,
-          epsilon: 0.001,
-        }
+    anchor_generator {
+      ssd_anchor_generator {
+        num_layers: 6
+        min_scale: 0.20000000298
+        max_scale: 0.949999988079
+        aspect_ratios: 1.0
+        aspect_ratios: 2.0
+        aspect_ratios: 0.5
+        aspect_ratios: 3.0
+        aspect_ratios: 0.333299994469
       }
-      override_base_feature_extractor_hyperparams: true
     }
-    loss {
-      classification_loss {
-        weighted_sigmoid_focal {
-          alpha: 0.75,
-          gamma: 2.0
-        }
-      }
-      localization_loss {
-        weighted_smooth_l1 {
-          delta: 1.0
-        }
-      }
-      classification_weight: 1.0
-      localization_weight: 1.0
-    }
-    normalize_loss_by_num_matches: true
-    normalize_loc_loss_by_codesize: true
     post_processing {
       batch_non_max_suppression {
-        score_threshold: 1e-8
-        iou_threshold: 0.6
+        score_threshold: 0.300000011921
+        iou_threshold: 0.600000023842
         max_detections_per_class: 100
         max_total_detections: 100
       }
       score_converter: SIGMOID
     }
+    normalize_loss_by_num_matches: true
+    loss {
+      localization_loss {
+        weighted_smooth_l1 {
+        }
+      }
+      classification_loss {
+        weighted_sigmoid {
+        }
+      }
+      hard_example_miner {
+        num_hard_examples: 3000
+        iou_threshold: 0.990000009537
+        loss_type: CLASSIFICATION
+        max_negatives_per_positive: 3
+        min_negatives_per_image: 3
+      }
+      classification_weight: 1.0
+      localization_weight: 1.0
+    }
   }
 }
-
-train_config: {
-  fine_tune_checkpoint_version: V2
-  fine_tune_checkpoint: "pre-trained-model/mobilenet_v2.ckpt-1"		##-- Edit( check downloaded model)
-  fine_tune_checkpoint_type: "classification"							##-- Edit this( using classification model's ckpt )
-  batch_size: 128														##-- Edit this as per need
-  sync_replicas: true
-  startup_delay_steps: 0
-  replicas_to_aggregate: 8
-  num_steps: 50000
+train_config {
+  batch_size: 24
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -152,40 +143,39 @@ train_config: {
     }
   }
   optimizer {
-    momentum_optimizer: {
-      learning_rate: {
-        cosine_decay_learning_rate {
-          learning_rate_base: .8
-          total_steps: 50000
-          warmup_learning_rate: 0.13333
-          warmup_steps: 2000
+    rms_prop_optimizer {
+      learning_rate {
+        exponential_decay_learning_rate {
+          initial_learning_rate: 0.00400000018999
+          decay_steps: 800720
+          decay_factor: 0.949999988079
         }
       }
-      momentum_optimizer_value: 0.9
+      momentum_optimizer_value: 0.899999976158
+      decay: 0.899999976158
+      epsilon: 1.0
     }
-    use_moving_average: false
   }
-  max_number_of_boxes: 100
-  unpad_groundtruth_tensors: false
+  fine_tune_checkpoint: "pre-trained-model/model.ckpt"
+  num_steps: 200000
+  fine_tune_checkpoint_type: "detection"
 }
-
-train_input_reader: {
-  label_map_path: "annotations/label_map.pbtxt" ##Edit this
+train_input_reader {
+  label_map_path: "annotations/label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "annotations/train.record" ##Edit this
+    input_path: "annotations/train.record"
   }
 }
-
-eval_config: {
-  metrics_set: "coco_detection_metrics"
+eval_config {
+  num_examples: 8000
+  max_evals: 10
   use_moving_averages: false
 }
-
-eval_input_reader: {
-  label_map_path: "annotations/label_map.pbtxt" ##Edit this
+eval_input_reader {
+  label_map_path: "annotations/label_map.pbtxt"
   shuffle: false
-  num_epochs: 1
+  num_readers: 1
   tf_record_input_reader {
-    input_path: "annotations/test.record" ##Edit this
+    input_path: "annotations/test.record"
   }
 }
